# paralegal-bench

./: .gitignore  .gitmodules  Cargo.toml  README.md  clean-case-studies.sh  roll.sh  rust-toolchain.toml
atomic-server/my-policy/: Cargo.toml
atomic-server/my-policy/src/: main.rs
case-studies/lemmy-unhacked/crates/api/: Cargo.toml
case-studies/lemmy-unhacked/crates/api/src/comment/: mark_as_read.rs
case-studies/lemmy-unhacked/crates/api/src/comment_report/: resolve.rs
case-studies/lemmy-unhacked/crates/api/src/community/: ban.rs  block.rs  follow.rs  transfer.rs
case-studies/lemmy-unhacked/crates/api/src/local_user/: block.rs  change_password.rs  list_banned.rs  login.rs
case-studies/lemmy-unhacked/crates/api/src/post/: like.rs  mark_read.rs  save.rs  sticky.rs
case-studies/lemmy-unhacked/crates/api/src/post_report/: list.rs  resolve.rs
case-studies/lemmy-unhacked/crates/api/src/private_message/: mark_read.rs
case-studies/lemmy-unhacked/crates/api/src/site/: leave_admin.rs
case-studies/lemmy-unhacked/crates/api_crud/: Cargo.toml
case-studies/lemmy-unhacked/crates/api_crud/src/comment/: delete.rs  list.rs  remove.rs  update.rs
case-studies/lemmy-unhacked/crates/api_crud/src/community/: create.rs  read.rs  remove.rs
case-studies/lemmy-unhacked/crates/api_crud/src/post/: delete.rs  read.rs  remove.rs  update.rs
case-studies/lemmy-unhacked/crates/api_crud/src/private_message/: create.rs  delete.rs  (+1 more)
case-studies/websubmit/: .gitignore  .gitmodules  Cargo.toml  baseline-external-annotations.toml  config.toml  lib-external-annotations.toml  rust-toolchain.toml  strict-external-annotations.toml
case-studies/websubmit/src/: admin.rs  apikey.rs  backend.rs  config.rs  email.rs  main.rs  questions.rs
freedit/my-policy/: Cargo.toml
freedit/my-policy/src/: main.rs
griswold/: Cargo.toml  atomic-test.toml  bench-config.toml  build.rs  case-studies-only.toml  only-total-lemmy.toml  separate-controllers-test.toml  use-cases-only.toml
griswold/src/: conversion.rs  input.rs  main.rs  output.rs  preparation.rs  run.rs
griswold/src/preparation/: lemmy.rs  mod.rs
lemmy-old/: Cargo.toml  external-annotations.toml  get_local_user_view_from_jwt_bc82cc.mir  get_local_user_view_from_jwt_closure_closure_905dfe.mir  get_local_user_view_from_jwt_closure_d4ed7a.mir  perform_349025.mir  perform_closure_bdbd4e.mir  perform_closure_closure_a8cb4.mir
lemmy-old/.cargo/: config.toml
lemmy-old/crates/api/: Cargo.toml
lemmy-old/crates/api/src/comment/: save.rs
lemmy-old/crates/api/src/community/: ban.rs  hide.rs
lemmy-old/crates/api/src/lemmy_api_common/: utils.rs
lemmy-old/crates/api/src/lemmy_apub/: mod.rs
lemmy-old/crates/api/src/lemmy_db_schema/: utils.rs
lemmy-old/crates/api/src/lemmy_db_views/: local_user_view.rs
lemmy-old/crates/api/src/lemmy_db_views_actor/: person_block_view.rs
lemmy-old/crates/api/src/lemmy_db_views_moderator/: admin_purge_post_view.rs  mod_remove_comment_view.rs  mod_remove_post_view.rs
lemmy-old/crates/api/src/lemmy_utils/: claims.rs
lemmy-old/crates/api/src/lemmy_websocket/: mod.rs
lemmy-old/crates/api/src/local_user/: add_admin.rs  ban_person.rs  change_password_after_reset.rs  list_banned.rs  login.rs  report_count.rs  save_settings.rs  verify_email.rs
lemmy-old/crates/api/src/post/: get_link_metadata.rs  like.rs  lock.rs  mark_read.rs
lemmy-old/crates/api/src/post_report/: list.rs
lemmy-old/crates/api/src/site/: mod_log.rs  resolve_object.rs  search.rs
lemmy-old/eval-driver/: README.md
lemmy-old/eval-driver/src/: main.rs
lemmy-old/props/: basic-helpers.frg  basic_helpers.frg  error.frg  instance-props.frg
lemmy-old/props-results/: community.txt  instance.txt
lemmy-old/props/api/comment/: like.frg  like.info.json  mark_as_read.frg  mark_as_read.info.json  save.frg  save.info.json
lemmy-old/props/api/comment_report/: create.frg  create.info.json  list.frg  list.info.json  resolve.frg  resolve.info.json
lemmy-old/props/api/community/: add_mod.frg  add_mod.info.json  block.frg  block.info.json  follow.frg  follow.info.json
lemmy-old/props/api/post/: like.frg
lemmy-old/props/sanity-checks/: oxymorons.frg  reads-writes.frg
lemmy/crates/api/: Cargo.toml
lemmy/crates/api/src/: lib.rs  websocket.rs
lemmy/crates/api/src/comment/: like.rs  mark_as_read.rs  save.rs
lemmy/crates/api/src/comment_report/: create.rs  list.rs  resolve.rs
lemmy/crates/api/src/community/: add_mod.rs  ban.rs  block.rs  follow.rs  hide.rs  transfer.rs
lemmy/crates/api/src/lemmy_api_common/: comment.rs  mod.rs  request.rs  utils.rs  websocket.rs
lemmy/crates/api/src/lemmy_api_crud/: mod.rs
lemmy/crates/api/src/lemmy_apub/: mentions.rs  mod.rs
lemmy/crates/api/src/lemmy_db_schema/: mod.rs
lemmy/crates/api/src/lemmy_db_views/: mod.rs  private_message_view.rs
lemmy/crates/api/src/lemmy_db_views_actor/: community_follower_view.rs  community_view.rs  structs.rs
lemmy/crates/api/src/lemmy_db_views_moderator/: admin_purge_comment_view.rs  admin_purge_community_view.rs  admin_purge_person_view.rs  mod_add_community_view.rs  mod_ban_from_community_view.rs  mod_remove_community_view.rs  mod_transfer_community_view.rs
lemmy/crates/api/src/lemmy_websocket/: routes.rs  send.rs
lemmy/crates/api/src/local_user/: add_admin.rs  ban_person.rs  block.rs  change_password.rs  list_banned.rs  login-buggy.rs  login.rs  report_count.rs  reset_password.rs  save_settings.rs
lemmy/crates/api/src/post/: like.rs  lock.rs  mark_read.rs  save.rs  sticky.rs
lemmy/crates/api/src/post_report/: create.rs  list.rs  resolve.rs
lemmy/crates/api/src/private_message/: mark_read.rs
lemmy/crates/api/src/site/: leave_admin.rs  mod_log.rs  resolve_object.rs  search.rs
lemmy/eval-driver/: Cargo.toml  output.txt  results.txt  results2.txt
lemmy/eval-driver/src/: error-msg.rs  main.rs
policies/atomic/: Cargo.toml  build.rs
policies/atomic/src/: lib.rs  main.rs
policies/freedit/: Cargo.toml  build.rs
policies/freedit/src/: lib.rs  main.rs
policies/hyperswitch/: Cargo.toml  build.rs
policies/hyperswitch/src/: lib.rs  main.rs
(+808 files in other folders)
