[workspace]
members = ["griswold", "policies/*"]

[workspace.dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
petgraph = { version = "0.6" }
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

[workspace.dependencies.paralegal-policy]
# path = "../paralegal/crates/paralegal-policy"
git = "https://github.com/brownsys/paralegal"
rev = "67e89fce97c4cffdd9df25b6fa3435f42de79ec1"

[workspace.dependencies.paralegal-spdg]
# path = "../paralegal/crates/paralegal-spdg"
git = "https://github.com/brownsys/paralegal"
rev = "67e89fce97c4cffdd9df25b6fa3435f42de79ec1"
