[workspace]
members = ["griswold", "policies/*", "graphtool"]

[workspace.dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
petgraph = { version = "0.6" }
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }

[workspace.dependencies.paralegal-policy]
path = "../paralegal/crates/paralegal-policy"
# git = "https://github.com/brownsys/paralegal"
# rev = "2f1c24c1f040ec7f6928d1aac0beea4bef182b2d"

[workspace.dependencies.paralegal-spdg]
path = "../paralegal/crates/paralegal-spdg"
# git = "https://github.com/brownsys/paralegal"
# rev = "2f1c24c1f040ec7f6928d1aac0beea4bef182b2d"
