[workspace]
members = ["griswold", "policies/*"]
exclude = ["paralegal"]

[workspace.dependencies]
paralegal-policy = { path = "paralegal/crates/policy" }
# Cargo package alias: locally the crate was renamed paralegal-spdg → paralegal-pdg.
paralegal-spdg = { path = "paralegal/crates/pdg", package = "paralegal-pdg" }
clap = { version = "=4.4.18", features = ["derive"] }
petgraph = { version = "0.6" }
anyhow = { version = "1", features = ["backtrace"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
