[package]
name = "griswold"
description = "The top-level coordinator for Paralegal's evaluation benchmarks for the 2024 paper submission to SOSP. Named after 381 U.S. 479 'Griswold v. Connecticut' that recognized a persons's general 'right to privacy'."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paralegal-policy = { workspace = true }
anyhow = { workspace = true }
sysinfo = "0.30"
humantime = "2"
indicatif = "0.17"
csv = "1"
humantime-serde = "1"
toml = { version = "0.8", features = ["preserve_order"] }
clap = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
cargo = "0.78.0"

atomic = { path = "../policies/atomic" }
freedit = { path = "../policies/freedit" }
hyperswitch = { path = "../policies/hyperswitch" }
lemmy = { path = "../policies/lemmy" }
plume = { path = "../policies/plume" }
websubmit = { path = "../policies/websubmit" }
contile = { path = "../policies/contile" }
mCaptcha = { path = "../policies/mCaptcha" }
semver = { version = "1.0.22", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = "0.4.37"
