#[package]
#name = "lemmy_server"
#version = "0.16.5"
#edition = "2021"
#description = "A link aggregator for the fediverse"
#license = "AGPL-3.0"
#homepage = "https://join-lemmy.org/"
#documentation = "https://join-lemmy.org/docs/en/index.html"
#rust-version = "1.57"

#[lib]
#doctest = false

[profile.dev]
debug = 0


[workspace]
members = [
    "crates/api",
    #"crates/api_crud",
    #"crates/api_common",
    #"crates/apub",
    #"crates/utils",
    #"crates/db_schema",
    #"crates/db_views",
    #"crates/db_views_actor",
    #"crates/db_views_actor",
    #"crates/websocket",
    #"crates/routes"
]

