[package]
name = "my-policy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "my-policy"

[dependencies]
anyhow = "1"
paralegal-policy = { path = "../../../paralegal/crates/paralegal-policy" }
lazy_static = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.21"
bincode = { version = "1", optional = true }
directories = { version = ">= 2, < 5", optional = true }
html2md = { version = "0.2.13", optional = true }
kuchiki = { version = "0.8.1", optional = true }
lol_html = { version = "0.3.1", optional = true }
rand = { version = "0.8" }
regex = "1"
ring = "0.16.19"
rio_api = { version = "0.8", optional = true }
rio_turtle = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = { version = "0.34", optional = true, features = ["no_logs"] }
toml = { version = "0.7", optional = true }
tracing = "0.1"
ureq = "2"
url = "2"
urlencoding = "2"
time = "=0.3.10"
time-macros = "=0.2.4"
winnow = "=0.4.0"
serde_spanned = "=0.6.0"

[dev-dependencies]
criterion = "0.4"
iai = "0.1"
lazy_static = "1"
ntest = "0.9"


[workspace]
