[package]
name = "eval-driver"
version = "0.1.0"
edition = "2021"
authors = ["Justus Adam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
indicatif = "0.17.3"
serde-lexpr = "0.1"
humantime = "2"
either = "1.8"
anyhow = "1.0"
strum = { version = "0.26.2", features = ["derive"] }

[workspace]
