[package]
name = "atomic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "atomic"

[dependencies]
anyhow = { workspace = true }
paralegal-policy = { workspace = true }
lazy_static = "1"
clap = { workspace = true }
