[package]
name = "freedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Path adjusted for wherever you cloned the dfpp repository
paralegal-policy = { path = "../../../paralegal/crates/paralegal-policy" }
lazy_static = "1"
clap = { workspace = true }
anyhow = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
