[package]
name = "hyperswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = { workspace = true }
paralegal-policy = { workspace = true }
lazy_static = "1"
clap = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
