[package]
name = "lemmy_api"
version = "0.16.5"
edition = "2021"
description = "A link aggregator for the fediverse"
license = "AGPL-3.0"
homepage = "https://join-lemmy.org/"
documentation = "https://join-lemmy.org/docs/en/index.html"
rust-version = "1.57"

[lib]
name = "lemmy_api"
path = "src/lib.rs"
doctest = false

[dependencies]
activitypub_federation = "0.2.0"
diesel = { version = "1.4.8", features = [
	"postgres",
	"chrono",
	"r2d2",
	"serde_json",
] }
bcrypt = "0.12.1"
chrono = { version = "0.4.19", features = ["serde"], default-features = false }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
serde = { version = "1.0.136", features = ["derive"] }
actix-web = { version = "4.0.1", default-features = false }
base64 = "0.13.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
async-trait = "0.1.53"
captcha = "0.0.9"
anyhow = "1.0.56"
tracing = "0.1.32"
url = { version = "2.2.2", features = ["serde"] }
strum = "0.24.0"
strum_macros = "0.24.0"
diesel-derive-newtype = { version = "0.1.2" }
diesel_migrations = { version = "1.4.0" }
sha2 = { version = "0.10.2" }
regex = { version = "1.5.5" }
once_cell = { version = "1.10.0" }
activitystreams-kinds = "0.2.1"
serde_with = "1.12.0"
actix = "0.13.0"
actix-rt = { version = "2.7.0", default-features = false }
http = "0.2.6"
http-signature-normalization-actix = { version = "0.6.1", default-features = false, features = [
	"server",
	"sha-2",
] }
futures = "0.3.21"
itertools = "0.10.3"
reqwest = { version = "0.11.10", features = ["json"] }
html2md = "0.2.13"
lettre = "0.10.0-rc.7"
tracing-error = "0.2.0"
rand = "0.8.5"
comrak = { version = "0.12.1", default-features = false }
openssl = "0.10.38"
reqwest-middleware = "0.1.5"
smart-default = "0.6.0"
jsonwebtoken = "8.0.1"
doku = { git = "https://github.com/anixe/doku", features = ["url-2"] }
html2text = "0.3.1"
rosetta-i18n = "0.1.2"
parking_lot = "0.12.0"
percent-encoding = { version = "2.1.0" }
background-jobs = "0.12.0"
tokio = "1.17.0"
actix-web-actors = { version = "4.1.0", default-features = false }
opentelemetry = "0.17.0"
tracing-opentelemetry = "0.17.2"
encoding = { version = "0.2.33" }
webpage = { version = "1.4.0", default-features = false, features = ["serde"] }
deser-hjson = "1.0.2"
webmention = "0.4.0"
paralegal = { path = "../../../../paralegal/crates/paralegal" }

[build-dependencies]
rosetta-build = "0.1.2"

[features]

# for bug 1, get_local_user_view_from_jwt versions
bug-1-code = []
bug-1-fix = []
post-bug-1 = []

# for bugs 2/3, where they found/fixed (some of) the bug themselves
correct = []

# api
comment-like = []
comment-mark-as-read = []
comment-save = []
comment-report-create = []
comment-report-list = []
comment-report-resolve = []
community-add-mod = []
community-ban = []
community-block = []
community-follow = []
community-hide = []
community-transfer = []
notification-list-mentions = []
notification-list-replies = []
notification-mark-all-read = []
notification-mark-mention-read = []
notification-unread-count = []
user-add-admin = []
user-ban-person = []
user-block = []
user-change-password = []
user-list-banned = []
user-login = []
user-report-count = []
user-save-settings = []
post-like = []
post-lock = []
post-mark-read = []
post-save = []
post-sticky = []
post-report-create = []
post-report-list = []
post-report-resolve = []
private-message-mark-read = []
purge-comment = []
purge-community = []
purge-person = []
purge-post = []
registration-approve = []
registration-list = []
registration-unread-counts = []
site-leave-admin = []
site-mod-log = []
site-resolve-object = []
site-search = []


# api crud
comment-create = []
comment-delete = []
comment-list = []
comment-read = []
comment-remove = []
comment-update = []
community-create = []
community-delete = []
community-list = []
community-read = []
community-remove = []
community-update = []
post-create = []
post-delete = []
post-list = []
post-read = []
post-remove = []
post-update = []
private-message-create = []
private-message-delete = []
private-message-read = []
private-message-update = []
site-create = []
site-read = []
site-update = []
user-create = []
user-delete = []
user-read = []


full = []
default = ["full"]

all-controllers = [
	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "comment-like",

	"comment-mark-as-read",   # Rustc: 2s 899ms Flowistry: 1s 629ms Conversion: 7ms 415μs Serialization: 2s 42ms
	"comment-save",           # Rustc: 2s 907ms Flowistry: 1s 387ms Conversion: 7ms 43μs Serialization: 1s 945ms
	"comment-report-create",  # Rustc: 2s 913ms Flowistry: 1min 0s Conversion: 27ms 803μs Serialization: 8s 112ms
	"comment-report-list",    # Rustc: 2s 859ms Flowistry: 916ms 850μs Conversion: 5ms 140μs Serialization: 1s 402ms
	"comment-report-resolve", # Rustc: 2s 801ms Flowistry: 2s 970ms Conversion: 13ms 473μs Serialization: 4s 73ms

	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "community-add-mod",
	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "community-ban",

	"community-block",  # Rustc: 2s 875ms Flowistry: 35s 970ms Conversion: 21ms 713μs Serialization: 6s 452ms
	"community-follow", # Rustc: 2s 882ms Flowistry: 1min 1s Conversion: 36ms 563μs Serialization: 12s 77ms

	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "community-hide",

	"community-transfer",             # Rustc: 2s 876ms Flowistry: 7s 800ms Conversion: 11ms 86μs Serialization: 3s 55ms
	"notification-list-mentions",     # Rustc: 2s 912ms Flowistry: 951ms 552μs Conversion: 5ms 153μs Serialization: 1s 419ms
	"notification-list-replies",      # Rustc: 2s 875ms Flowistry: 918ms 708μs Conversion: 5ms 226μs Serialization: 1s 433ms
	"notification-mark-all-read",     # Rustc: 2s 866ms Flowistry: 2s 654ms Conversion: 7ms 634μs Serialization: 2s 175ms
	"notification-mark-mention-read", # Rustc: 2s 890ms Flowistry: 1s 505ms Conversion: 7ms 137μs Serialization: 2s 18ms
	"notification-unread-count",      # Rustc: 2s 878ms Flowistry: 1s 383ms Conversion: 6ms 486μs Serialization: 1s 890ms
	"user-add-admin",                 # Rustc: 2s 886ms Flowistry: 1s 817ms Conversion: 7ms 50μs Serialization: 2s 90ms

	# Disabled because "Tracking borrow behind shared reference."
	# "user-ban-person",

	"user-block",           # Rustc: 2s 882ms Flowistry: 1s 296ms Conversion: 7ms 17μs Serialization: 1s 987ms
	"user-change-password", # Rustc: 2s 896ms Flowistry: 1s 75ms Conversion: 6ms 0μs Serialization: 1s 707ms
	"user-list-banned",     # Rustc: 2s 882ms Flowistry: 490ms 624μs Conversion: 4ms 137μs Serialization: 1s 52ms
	"user-login",           # Rustc: 2s 877ms Flowistry: 1s 118ms Conversion: 5ms 882μs Serialization: 1s 577ms
	"user-report-count",    # Rustc: 2s 875ms Flowistry: 969ms 552μs Conversion: 5ms 782μs Serialization: 1s 640ms
	"user-save-settings",   # Rustc: 2s 890ms Flowistry: 7s 349ms Conversion: 14ms 637μs Serialization: 4s 329ms

	# Tracking borrow behind shared reference.
	# "post-like",
	# Tracking borrow behind shared reference.
	# "post-lock",

	"post-mark-read", # Rustc: 2s 878ms Flowistry: 1s 847ms Conversion: 9ms 215μs Serialization: 2s 661ms
	"post-save",      # Rustc: 2s 916ms Flowistry: 2s 219ms Conversion: 9ms 218μs Serialization: 2s 542ms

	# Tracking borrow behind shared reference.
	# "post-sticky",

	"post-report-create",        # Rustc: 2s 858ms Flowistry: 58s 271ms Conversion: 26ms 867μs Serialization: 7s 965ms
	"post-report-list",          # Rustc: 2s 897ms Flowistry: 903ms 693μs Conversion: 4ms 995μs Serialization: 1s 424ms
	"post-report-resolve",       # Rustc: 2s 888ms Flowistry: 2s 974ms Conversion: 13ms 91μs Serialization: 4s 63ms
	"private-message-mark-read", # Rustc: 2s 891ms Flowistry: 3s 992ms Conversion: 12ms 332μs Serialization: 3s 720ms
	"purge-comment",             # Rustc: 2s 880ms Flowistry: 1s 607ms Conversion: 7ms 281μs Serialization: 1s 982ms
	"purge-community",           # Rustc: 2s 858ms Flowistry: 1min 2s Conversion: 19ms 180μs Serialization: 6s 415ms
	"purge-person",              # Rustc: 2s 883ms Flowistry: 1min 1s Conversion: 18ms 548μs Serialization: 6s 706ms
	"purge-post",                # Rustc: 2s 910ms Flowistry: 7s 509ms Conversion: 12ms 665μs Serialization: 3s 799ms

	# Fails the assertion in ana/mod.rs:477
	#"registration-approve",

	"registration-list",          # Rustc: 2s 892ms Flowistry: 821ms 929μs Conversion: 5ms 122μs Serialization: 1s 282ms
	"registration-unread-counts", # Rustc: 2s 889ms Flowistry: 657ms 953μs Conversion: 4ms 630μs Serialization: 1s 259ms
	"site-leave-admin",           # Rustc: 2s 889ms Flowistry: 5s 381ms Conversion: 10ms 914μs Serialization: 3s 295ms
	"site-mod-log",               # Rustc: 2s 881ms Flowistry: 15s 427ms Conversion: 13ms 995μs Serialization: 4s 662ms
	"site-resolve-object",        # Rustc: 2s 897ms Flowistry: 56s 243ms Conversion: 25ms 827μs Serialization: 8s 309ms
	"site-search",                # Rustc: 2s 892ms Flowistry: 1min 2s Conversion: 31ms 414μs Serialization: 8s 631ms

	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "comment-create",
	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "comment-delete",

	"comment-list", # Rustc: 2s 888ms Flowistry: 55s 884ms Conversion: 45ms 711μs Serialization: 6s 721ms
	"comment-read", # Rustc: 2s 878ms Flowistry: 2s 680ms Conversion: 8ms 478μs Serialization: 2s 747ms

	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "comment-remove",

	# Takes a very long time to analyze
	# "comment-update",
	"community-create", # Rustc: 2s 933ms Flowistry: 8s 52ms Conversion: 15ms 652μs Serialization: 4s 311ms

	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "community-delete",

	"community-list", # Rustc: 2s 875ms Flowistry: 2s 856ms Conversion: 9ms 592μs Serialization: 2s 882ms
	"community-read", # Rustc: 2s 862ms Flowistry: 48s 137ms Conversion: 24ms 662μs Serialization: 6s 912ms

	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "community-remove",
	# "community-update",
	# "post-create",
	# "post-delete",

	"post-list", # Rustc: 2s 871ms Flowistry: 55s 776ms Conversion: 24ms 227μs Serialization: 6s 755ms
	"post-read", # Rustc: 2s 794ms Flowistry: 9s 972ms Conversion: 13ms 825μs Serialization: 4s 453ms

	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "post-remove",
	# "post-update",

	# thread 'rustc' panicked at crates/paralegal-flow/src/ana/mod.rs:509:43:
	# internal error: entered unreachable code: _5 = [generator@crates/api/src/lemmy_apub/objects/private_message.rs:79:3: 79:35 (#11300)] { self: move _1, context: _2 }
	# at into_apub::bb0[5] in perform::bb0[6]←<closure>::bb72[2]←<closure>::bb157[2]←<closure>::bb72[2]←<closure>::bb53[10]←into_apub::bb0[5]←<closure>::bb72[2]←<closure>::bb45[2]←<closure>::bb40[7]	# "private-message-create",

	# Disabled because of "Tracking borrow behind shared reference." flowistry error
	# "private-message-delete",

	"private-message-read", # Rustc: 2s 789ms Flowistry: 945ms 861μs Conversion: 5ms 397μs Serialization: 1s 451ms

	# thread 'rustc' panicked at crates/paralegal-flow/src/ana/mod.rs:509:43:
	# internal error: entered unreachable code: _5 = [generator@crates/api/src/lemmy_apub/objects/private_message.rs:79:3: 79:35 (#11294)] { self: move _1, context: _2 }
	# at into_apub::bb0[5] in perform::bb0[6]←<closure>::bb72[2]←<closure>::bb126[2]←<closure>::bb72[2]←<closure>::bb53[10]←into_apub::bb0[5]←<closure>::bb35[2]	# "private-message-update",

	"site-create", # Rustc: 2s 807ms Flowistry: 2s 786ms Conversion: 11ms 8μs Serialization: 3s 86ms

	# Skipped because it goes into an endless loop and overflows the memory
	# "site-read",

	"site-update", # Rustc: 2s 827ms Flowistry: 6s 837ms Conversion: 14ms 447μs Serialization: 4s 242ms

	"user-delete", # Rustc: 4s 368ms Flowistry: 3min 37s Conversion: 37ms 369μs Serialization: 6s 976ms
	"user-read",   # Rustc: 2s 798ms Flowistry: 45s 898ms Conversion: 23ms 667μs Serialization: 6s 632ms
]
